--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,8 @@ jobs:
       - name: ⬇️ Checkout project
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: npm install
+
       - name: ⚒️ Build project
         run: npm run build
